[v0.0.3] fix compatibility to fasterize service + M2.4.x

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "zepgram/module-fasterize",
   "description": "Manage Fasterize cache from Magento admin and auto-trigger cache flush when it's necessary by using the Fasterize API service",
   "type": "magento2-module",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "authors": [
     {
       "name": "Benjamin Calef",
@@ -10,9 +10,9 @@
     }
   ],
   "require": {
-    "magento/framework": "^101.0.0|^102.0.0",
+    "magento/framework": "^101.0.0|^102.0.0|^103.0.0",
     "magento/module-store": "^100.0.0|^101.0.0",
-    "zepgram/module-base": "^0.0.1"
+    "zepgram/module-base": "~0.0.1"
   },
   "autoload": {
     "files": [
